--- a/index.html
+++ b/index.html
@@ -14,26 +14,46 @@
 
     <title>Frontend Mentor | Social links profile</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" class="css" />
   </head>
-  <body>
-    Jessica Randall London, United Kingdom "Front-end developer and avid
-    reader." GitHub Frontend Mentor LinkedIn Twitter Instagram
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Sherrisa Classon</a>.
-    </div>
+  <body>
+    <main>
+      <div class="card">
+        <img
+          src="assets/images/avatar-jessica.jpeg"
+          alt="Profile picture of Jessica Randall"
+          class="card-img"
+        />
+        <div class="card-name-location">
+          <h1 class="card-name">Jessica Randall</h1>
+          <p class="card-location">London, United Kingdom</p>
+          <p class="card-bio">"Front-end developer and avid reader."</p>
+        </div>
+        <div class="card-links">
+          <ul>
+            <li><a href="" class="">GitHub</a></li>
+            <li><a href="" class="">Frontend Mentor</a></li>
+            <li><a href="" class="">LinkedIn</a></li>
+            <li><a href="" class="">Twitter</a></li>
+            <li><a href="" class="">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Sherrisa Classon</a>.
+      </div>
+    </footer>
   </body>
 </html>
