--- a/index.html
+++ b/index.html
@@ -34,26 +34,29 @@
         <div class="card-name-location">
           <h1 class="card-name">Jessica Randall</h1>
           <p class="card-location">London, United Kingdom</p>
-          <p class="card-bio">"Front-end developer and avid reader."</p>
         </div>
-        <div class="card-links">
-          <ul>
-            <li><a href="" class="">GitHub</a></li>
-            <li><a href="" class="">Frontend Mentor</a></li>
-            <li><a href="" class="">LinkedIn</a></li>
-            <li><a href="" class="">Twitter</a></li>
-            <li><a href="" class="">Instagram</a></li>
-          </ul>
-        </div>
+
+        <p class="card-bio">"Front-end developer and avid reader."</p>
+
+        <ul class="card-links">
+          <button><a href="" class="">GitHub</a></button>
+          <button><a href="" class="">Frontend Mentor</a></button>
+          <button><a href="" class="">LinkedIn</a></button>
+          <button><a href="" class="">Twitter</a></button>
+          <button><a href="" class="">Instagram</a></button>
+        </ul>
       </div>
     </main>
     <footer>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Sherrisa Classon</a>.
-      </div>
+      <p>
+        <small>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://www.linkedin.com/in/sherrisa/">Sherrisa Classon</a>.
+        </small>
+      </p>
     </footer>
   </body>
 </html>
