--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <p class="card-bio">"Front-end developer and avid reader."</p>
 
         <ul class="card-links">
-          <button><a href="" class="">GitHub</a></button>
-          <button><a href="" class="">Frontend Mentor</a></button>
-          <button><a href="" class="">LinkedIn</a></button>
-          <button><a href="" class="">Twitter</a></button>
-          <button><a href="" class="">Instagram</a></button>
+          <li><a href="" class="">GitHub</a></li>
+          <li><a href="" class="">Frontend Mentor</a></li>
+          <li><a href="" class="">LinkedIn</a></li>
+          <li><a href="" class="">Twitter</a></li>
+          <li><a href="" class="">Instagram</a></li>
         </ul>
       </div>
     </main>
